# police-exam-archive

./: .clasp.json  .download_cache_all.json  .env.example  .gitignore  BEST_PRACTICES.md  BUG_FIX_REPORT.md  COVERAGE_REPORT.md  IMPROVEMENT_REPORT.md  PLAN.md  QA_Checklist.txt  QUICK_START.txt  README.md  agent1_ocr_report.json  agent2_scan.py  agent2_structural_report.json  agent3_chinese_report.json  audit_deep_analysis.py  audit_immigration_exam.py  auto_generate_form.py  browser_test.py  browser_test_extended.py  cache.py  comprehensive_scan_report.json  config.py  content_audit.py  content_audit_report.json  cross_category_audit.py  deep_audit.py  deep_essay_scan.py  deep_scan_report.json  download_all_categories.py  download_immigration.py  download_specific_pdfs.py  download_資管系.py  english_words_from_exams.txt  errors.py  examdb.py  extract_figures.py  final_mobile_audit.py  final_regression.py  (+44 more)
backup_old/: Code_69_backup.gs  Code_98.gs
docs/: CI_CD_GUIDE.md  CLEANUP_ORGANIZATION_REPORT.md  CLEANUP_REPORT.md  COMPLETE_PROJECT_HISTORY.md  DEEP_CLEANUP_REPORT.md  FINAL_CHECK_REPORT.md  FINAL_CLEANUP_SUMMARY.md  IMPLEMENTATION_REPORT.md  NEW_FEATURES_GUIDE.md  PROJECT_OVERVIEW.md  TEST_REPORT.md
downloads_for_fix/: download_record.json
reports/: download_fix_report.txt  extra_issues.json  fix_all_defects_report.txt  json_audit_report.txt  mobile_r3_audit.md  mobile_r3_static_analysis.md  mobile_r3_test.py  ocr_defect_report.txt  parse_missing_report.json  pdf_compare_report.txt  round1_code_review.md  round1_ux_audit.md  round2_code_review.md  round2_ux_test.py  (+5 more)
(+3954 files in other folders)
